ADD: Implementacion de CORS y Casteo automático de Enum en los endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Api/Unab.Practice.Employee/.vs/ProjectEvaluation
 /Api/Unab.Practice.Employee/Unab.Practice.Employee.Domain/bin
 /Api/Unab.Practice.Employee/Unab.Practice.Employee.Dto/bin/Debug
+/Api/Unab.Practice.Employee/Unab.Practice.Employee.WebApi/obj
