--- a/Api/Unab.Practice.Employee/Unab.Practice.Employee.WebApi/Unab.Practice.Employee.WebApi.csproj
+++ b/Api/Unab.Practice.Employee/Unab.Practice.Employee.WebApi/Unab.Practice.Employee.WebApi.csproj
@@ -4,10 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>7625cf83-4c4f-447a-b997-46c77a86d142</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
